# credit_calculator

./: .gitignore  Cargo.toml
src/: credit_calculator.rs  main.rs
ui/: appwindow.slint
