[package]
name = "credit-calculator"
version = "0.1.0"
authors = ["Johannes Götze <jos-mail@gmx.de>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.4"
chrono = "*"
thousands ="*"

[build-dependencies]
slint-build = "1.4"
